--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -77,6 +77,7 @@
   </div>
 </nav>
 
+
         {% if app.user %}
             <div class="text-light text-center">
                 Vous êtes connecté en tant que {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Se déconnecter</a>
@@ -89,6 +90,11 @@
       </h2>
     {% endfor %}
 
+    {% for message in app.flashes('danger') %}
+     <h2 class="alert alert-danger text-center" role="alert">
+      {{ message }}
+      </h2>
+    {% endfor %}
 
 
     {% block body %}
