--- a/templates/base/about.html.twig
+++ b/templates/base/about.html.twig
@@ -3,36 +3,40 @@
 {% block title %}{{ parent() }}Staff{% endblock %}
 
 {% block body %}
-    <h1 class="text-center text-primary">Staff</h1>
-
-<div class="jumbotron p-5">
-  <h1 class="display-4 text-primary">Staff Cactus Esport</h1>
-  <p class="lead text-light">L'esport étant un travail d'équipe, voici tous les bénévoles oeuvrant pour l'organisation de la Cactus Esport, sa gestion ainsi que sa communication.</p>
-  <hr class="my-4">
-  <p class="text-light">Si vous souhaitez vous joindre à nous bénévolement, n'hésitez pas à postuler !</p>
-  <p class="lead">
-    <a class="btn btn-primary btn-lg" href="{{path('join') }}" role="button">Je postule</a>
-  </p>
-</div>
-
-  <div class="jumbotron m-5">
-    <h1 class="display-4 text-primary text-center"><strong>Cactus Esport</strong></h1>
-    <p class="lead text-light">La Cactus Esport est une association sous loi 1901 promouvant, participant et organisant des évènements de sports électroniques, plus communément appelés esport. Localisée à Beuvry dans le Pas-de-Calais, nos membres viennent des quatre coins de l'hexagone, mais aussi pour certains du Québec. Notre Team a un but fédérateur et communautaire tout en ayant pour ambitions de professionnaliser notre activité.</p>
+  <div class="jumbotron p-5">
+    <h1 class="display-4 text-primary text-center"><strong>Staff Cactus Esport</strong></h1>
+    <p class="lead text-light">La Cactus Esport est une association sous loi 1901 promouvant, participant et organisant des évènements de sports 
+    électroniques, plus communément appelés esport. Localisée à Beuvry dans le Pas-de-Calais, nos membres viennent des quatre coins de l'hexagone,
+     mais aussi pour certains du Québec. Notre Team a un but fédérateur et communautaire tout en ayant pour ambitions de professionnaliser notre 
+     activité.<br/>
+     L'esport étant un travail d'équipe, voici tous les bénévoles oeuvrant pour l'organisation de la Cactus Esport, 
+     sa gestion ainsi que sa communication.</p>
   </div>
 
 
-  <div class="container marketing p-4">
+  <div class="container marketing mt-3 mb-3">
 
-    <hr class="featurette-divider">
+    <div class="container mt-5 mb-5">
+      <h1 class="display-5 text-primary"><strong><u>Pôle Direction: le bureau</u></strong></h1>
+    </div>
 
     <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
-        <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+      <div class="col-md-7 order-md-2">
+        <h2 class="featurette-heading text-light">Rémi "Merzouki" BECQUAERT</h2>
+        <p class="lead text-light">
+        Fondateur de la structure, Merzouki assure l'organisation globale de la structure, le recrutement ainsi que les relations avec les partenaires
+        extérieurs. Fort d'une expérience réussie dans le domaine de l'esport, il veille à ce que la Cactus Esport respecte à la lettre ses principes
+        fondamentaux, à savoir: la rigueur, l'activité et le professionnalisme. Étudiant dans le développement web, il apporte notamment ses savoirs
+        dans la création et la gestion des médias internet de la structure.
+        </p>
+        <a href="https://www.linkedin.com/in/remi-becquaert/" class="btn btn-outline-light">
+          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+            <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+          </svg>
+        </a>
       </div>
-      <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+      <div class="col-md-5 order-md-1">
+        <img src="images/profil.jpg" class="img-thumbnail" style="max-width:60%;" alt="Photo de profil">
       </div>
     </div>
 
@@ -40,29 +44,76 @@
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
-        <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
-        <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+        <h2 class="featurette-heading text-light">"Nyfissa"</h2>
+        <p class="lead text-light">Responsable du pôle Graphisme de la structure, Nyfissa apporte son expérience au sein de la structure notamment dans la 
+        conception des médias graphiques et dans les relations internes de la structure.<br/>
+        Nyfissa a rejoint la Cactus Esport en janvier 2022 et occupe une place incontournable dans le développement de la Cactus Esport.
+        </p>
       </div>
       <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+        <img src="images/profil.jpg" class="img-thumbnail" style="max-width:60%;" alt="Photo de profil">
       </div>
     </div>
 
-    <hr class="featurette-divider">
+    <div class="container mt-5 mb-5">
+      <h1 class="display-5 text-primary"><strong><u>Pôle Communication: nos CM</u></strong></h1>
+    </div>
 
     <div class="row featurette">
-      <div class="col-md-7">
-        <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-        <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+      <div class="col-md-7 order-md-2">
+        <h2 class="featurette-heading text-light">"Loane"</h2>
+        <p class="lead text-light">
+        Toujours à l'affût des dernières trend TikTok, notre CM "Loane" nous apporte son expertise dans la création et la publication des médias
+        vidéos sur la plateforme TikTok. Elle assure également l'approvisionnement des clips de nos joueurs pour que vous vous assuriez que chez Cactus,
+        nous ne sommes pas là pour cueillir des pâquerettes (bien que nous aimons toutefois les fleurs).
+        </p>
       </div>
-      <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+      <div class="col-md-5 order-md-1">
+        <img src="images/profil.jpg" class="img-thumbnail" style="max-width:60%;" alt="Photo de profil">
       </div>
     </div>
 
     <hr class="featurette-divider">  
+
+        <div class="row featurette">
+      <div class="col-md-7 order-md-2">
+        <h2 class="featurette-heading text-light">Océane "Cornpich" R.</h2>
+        <p class="lead text-light">
+        Une structure sans Instagram, que serait-elle ? "Cornpich" ajoute sa pierre à l'édifice pour faire grandir notre communauté. Elle communique
+        sur l'actualité de la structure avec brio. 
+        </p>
+      </div>
+      <div class="col-md-5 order-md-1">
+        <img src="images/profil.jpg" class="img-thumbnail" style="max-width:60%;" alt="Photo de profil">
+      </div>
+    </div>
+
+    <hr class="featurette-divider">  
+
+    <div class="row featurette">
+      <div class="col-md-7 order-md-2">
+        <h2 class="featurette-heading text-light">"Menime"</h2>
+        <p class="lead text-light">
+        Sans lui, notre communication Twitter ne serait rien. "Menime" est le chef d'orcheste du compte Cactus Esport. Résultats de matchs,
+         posts de recrutement, gestion des DM... Un travail titanesque et de tout instant lui est affecté. Armé de sa bonne humeur, il est toujours
+         prêt à s'investir au sein de la structure de quelconque façon que ce soit.
+        </p>
+      </div>
+      <div class="col-md-5 order-md-1">
+        <img src="images/profil.jpg" class="img-thumbnail" style="max-width:60%;" alt="Photo de profil">
+      </div>
+    </div>
+
+    <div class="container m-5 mb-5">
+      <h3 class="text-light display 5 mb-4">Nous recherchons des bénévoles pour agrandir notre équipe !</h3>
+  
+      <h1 class="text-light display 3 mb-4">N'hésitez pas à postuler !</h1>
+      <p class="lead">
+        <a class="btn btn-primary btn-lg" href="{{path('join') }}" role="button">Je vous rejoins !</a>
+      </p>
+    </div>
+
+{% block footer %}{{ parent() }}{% endblock %}
 
 
 {% endblock %}
